--- a/src/main/OrderTabTitlePane/OrderTabTitlePane.fxml
+++ b/src/main/OrderTabTitlePane/OrderTabTitlePane.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <fx:root animated="false" prefHeight="67.0" prefWidth="463.0" stylesheets="@../Res/styles.css" text=" " type="TitledPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <content>
@@ -18,7 +19,10 @@
    <graphic>
       <Pane prefHeight="58.0" prefWidth="463.0">
          <children>
-            <Label fx:id="dateLabel" layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="77.0" styleClass="san-serif" text="25e Maj 2020" />
+            <Label fx:id="dateLabel" layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="77.0" text="25e Maj 2020">
+               <font>
+                  <Font name="SansSerif Regular" size="12.0" />
+               </font></Label>
             <Button fx:id="saveButton" layoutX="200.0" layoutY="17.0" mnemonicParsing="false" onMouseClicked="#onSaveButtonPressed" styleClass="san-serif" text="Lägg till som iköpslista" />
          </children>
       </Pane>
