--- a/src/main/PersonalData/PersonalData.fxml
+++ b/src/main/PersonalData/PersonalData.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -44,71 +43,88 @@
                                  <children>
                                     <Pane prefHeight="200.0" prefWidth="200.0">
                                        <children>
-                                          <Label layoutX="38.0" layoutY="14.0" prefHeight="17.0" prefWidth="200.0" styleClass="san-serif" text="Förnamn:">
+                                          <Label layoutX="38.0" layoutY="14.0" prefHeight="17.0" prefWidth="200.0" text="Förnamn:">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
                                           </Label>
-                                          <Label layoutX="38.0" layoutY="102.0" prefHeight="17.0" prefWidth="200.0" styleClass="san-serif" text="Efternamn:">
+                                          <Label layoutX="38.0" layoutY="102.0" prefHeight="17.0" prefWidth="200.0" text="Efternamn:">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
                                           </Label>
-                                          <Label layoutX="38.0" layoutY="190.0" prefHeight="17.0" prefWidth="200.0" styleClass="san-serif" text="Gatuadrress:">
+                                          <Label layoutX="38.0" layoutY="190.0" prefHeight="17.0" prefWidth="200.0" text="Gatuadrress:">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
                                           </Label>
-                                          <Label layoutX="38.0" layoutY="278.0" prefHeight="17.0" prefWidth="200.0" styleClass="san-serif" text="Postnummer:">
+                                          <Label layoutX="38.0" layoutY="278.0" prefHeight="17.0" prefWidth="200.0" text="Postnummer:">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
                                           </Label>
-                                          <Label layoutX="412.0" layoutY="14.0" prefHeight="17.0" prefWidth="200.0" styleClass="san-serif" text="Postort:">
+                                          <Label layoutX="412.0" layoutY="14.0" prefHeight="17.0" prefWidth="200.0" text="Postort:">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
                                           </Label>
-                                          <Label layoutX="412.0" layoutY="102.0" prefHeight="22.0" prefWidth="245.0" styleClass="san-serif" text="Mobilnummer:">
+                                          <Label layoutX="412.0" layoutY="102.0" prefHeight="22.0" prefWidth="245.0" text="Mobilnummer:">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
                                           </Label>
-                                          <Label layoutX="412.0" layoutY="190.0" prefHeight="22.0" prefWidth="147.0" styleClass="san-serif" text="E-mail adress:">
+                                          <Label layoutX="412.0" layoutY="190.0" prefHeight="22.0" prefWidth="147.0" text="E-mail adress:">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="firstNameTextField" layoutX="38.0" layoutY="44.0" onMouseClicked="#errorlabeldisapear2" prefHeight="35.0" prefWidth="245.0" promptText="Nicklas" style="-fx-background-radius: 20;" styleClass="san-serif" />
-                                          <TextField fx:id="lastNameTextField" layoutX="38.0" layoutY="132.0" onMouseClicked="#errorlabeldisapear3" prefHeight="35.0" prefWidth="245.0" promptText="Börjesson" style="-fx-background-radius: 20;" styleClass="san-serif" />
-                                          <TextField fx:id="addressTextField" layoutX="38.0" layoutY="220.0" onMouseClicked="#errorlabeldisapear5" prefHeight="35.0" prefWidth="245.0" promptText="Kantarellslingan 24" style="-fx-background-radius: 20;" styleClass="san-serif" />
-                                          <TextField fx:id="postcodeTextField" layoutX="38.0" layoutY="308.0" onMouseClicked="#errorlabeldisapear4" prefHeight="35.0" prefWidth="245.0" promptText="42011" style="-fx-background-radius: 20;" styleClass="san-serif" />
-                                          <TextField fx:id="areaTextField" layoutX="412.0" layoutY="44.0" onMouseClicked="#errorlabeldisapear" prefHeight="35.0" prefWidth="245.0" promptText="Göteborg" style="-fx-background-radius: 20;" styleClass="san-serif" />
-                                          <TextField fx:id="mobileNumberTextField" layoutX="412.0" layoutY="132.0" onMouseClicked="#errorlabeldisapear6" prefHeight="35.0" prefWidth="245.0" promptText="+46 ..." style="-fx-background-radius: 20;" styleClass="san-serif" />
-                                          <TextField fx:id="emailTextField" layoutX="412.0" layoutY="220.0" onMouseClicked="#errorlabeldisapear7" prefHeight="35.0" prefWidth="245.0" promptText="börjesson@exempel.nu" style="-fx-background-radius: 20;" styleClass="san-serif" />
+                                          <TextField fx:id="firstNameTextField" layoutX="38.0" layoutY="44.0" onMouseClicked="#errorlabeldisapear2" prefHeight="35.0" prefWidth="245.0" promptText="Nicklas" style="-fx-background-radius: 20;">
+                                             <font>
+                                                <Font name="SansSerif Regular" size="12.0" />
+                                             </font></TextField>
+                                          <TextField fx:id="lastNameTextField" layoutX="38.0" layoutY="132.0" onMouseClicked="#errorlabeldisapear3" prefHeight="35.0" prefWidth="245.0" promptText="Börjesson" style="-fx-background-radius: 20;">
+                                             <font>
+                                                <Font name="SansSerif Regular" size="12.0" />
+                                             </font></TextField>
+                                          <TextField fx:id="addressTextField" layoutX="38.0" layoutY="220.0" onMouseClicked="#errorlabeldisapear5" prefHeight="35.0" prefWidth="245.0" promptText="Kantarellslingan 24" style="-fx-background-radius: 20;">
+                                             <font>
+                                                <Font name="SansSerif Regular" size="12.0" />
+                                             </font></TextField>
+                                          <TextField fx:id="postcodeTextField" layoutX="38.0" layoutY="308.0" onMouseClicked="#errorlabeldisapear4" prefHeight="35.0" prefWidth="245.0" promptText="42011" style="-fx-background-radius: 20;">
+                                             <font>
+                                                <Font name="SansSerif Regular" size="12.0" />
+                                             </font></TextField>
+                                          <TextField fx:id="areaTextField" layoutX="412.0" layoutY="44.0" onMouseClicked="#errorlabeldisapear" prefHeight="35.0" prefWidth="245.0" promptText="Göteborg" style="-fx-background-radius: 20;">
+                                             <font>
+                                                <Font name="SansSerif Regular" size="12.0" />
+                                             </font></TextField>
+                                          <TextField fx:id="mobileNumberTextField" layoutX="412.0" layoutY="132.0" onMouseClicked="#errorlabeldisapear6" prefHeight="35.0" prefWidth="245.0" promptText="+46 ..." style="-fx-background-radius: 20;">
+                                             <font>
+                                                <Font name="SansSerif Regular" size="12.0" />
+                                             </font></TextField>
+                                          <TextField fx:id="emailTextField" layoutX="412.0" layoutY="220.0" onMouseClicked="#errorlabeldisapear7" prefHeight="35.0" prefWidth="245.0" promptText="börjesson@exempel.nu" style="-fx-background-radius: 20;">
+                                             <font>
+                                                <Font name="SansSerif Regular" size="12.0" />
+                                             </font></TextField>
                                           <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="640.0" layoutY="134.0" pickOnBounds="true" preserveRatio="true" />
                                           <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="640.0" layoutY="208.0" pickOnBounds="true" preserveRatio="true" />
-                                          <CheckBox fx:id="personalCheckBox" layoutX="412.0" layoutY="308.0" mnemonicParsing="false" text="Spara mina personuppgifter till nästa köp">
+                                          <CheckBox fx:id="personalCheckBox" layoutX="412.0" layoutY="308.0" mnemonicParsing="false" styleClass="cursor-hand" text="Spara mina personuppgifter till nästa köp">
                                              <font>
                                                 <Font size="17.0" />
                                              </font>
-                                             <styleClass>
-                                                <String fx:value="cursor-hand" />
-                                                <String fx:value="san-serif" />
-                                             </styleClass>
                                           </CheckBox>
-                                          <Label fx:id="firstNameErrorLbl" layoutX="38.0" layoutY="81.0" prefHeight="17.0" prefWidth="178.0" styleClass="san-serif" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
-                                          <Label fx:id="lastNameErrorLbl" layoutX="38.0" layoutY="169.0" prefHeight="17.0" prefWidth="176.0" styleClass="san-serif" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
-                                          <Label fx:id="adressErrorLbl" layoutX="38.0" layoutY="257.0" prefHeight="17.0" prefWidth="176.0" styleClass="san-serif" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
-                                          <Label fx:id="postCodeErrorLbl" layoutX="38.0" layoutY="345.0" prefHeight="17.0" prefWidth="179.0" styleClass="san-serif" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
-                                          <Label fx:id="areaErrorLbl" layoutX="412.0" layoutY="81.0" prefHeight="17.0" prefWidth="181.0" styleClass="san-serif" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
-                                          <Label fx:id="mobileErrorLbl" layoutX="412.0" layoutY="169.0" prefHeight="17.0" prefWidth="175.0" styleClass="san-serif" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
-                                          <Label fx:id="emailErrorLbl" layoutX="412.0" layoutY="257.0" prefHeight="17.0" prefWidth="183.0" styleClass="san-serif" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
-                                          <Label fx:id="postCodeAmountErrorLbl" layoutX="38.0" layoutY="345.0" prefHeight="17.0" prefWidth="193.0" styleClass="san-serif" text="OBS! Postnummer innehåller 5 tal!" textFill="#d30b0b" />
-                                          <Label fx:id="mobileAmountErrorLbl" layoutX="412.0" layoutY="169.0" prefHeight="17.0" prefWidth="210.0" styleClass="san-serif" text="OBS! Mobilnummer innehåller 10 tal!" textFill="#d30b0b" />
-                                          <Label fx:id="emailStyleErrorLbl" layoutX="412.0" layoutY="257.0" prefHeight="17.0" prefWidth="183.0" styleClass="san-serif" text="OBS! Fältet är inte i email Form" textFill="#d30b0b" />
-                                          <Label fx:id="postCodeStyleErrorLbl" layoutX="38.0" layoutY="345.0" prefHeight="17.0" prefWidth="220.0" styleClass="san-serif" text="OBS! Postnummer få bara innehålla tal!" textFill="#d30b0b" />
-                                          <Label fx:id="mobileStyleErrorLbl" layoutX="412.0" layoutY="169.0" prefHeight="17.0" prefWidth="227.0" styleClass="san-serif" text="OBS! Mobilnummer få bara innehåller tal!" textFill="#d30b0b" />
+                                          <Label fx:id="firstNameErrorLbl" layoutX="38.0" layoutY="81.0" prefHeight="17.0" prefWidth="178.0" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
+                                          <Label fx:id="lastNameErrorLbl" layoutX="38.0" layoutY="169.0" prefHeight="17.0" prefWidth="176.0" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
+                                          <Label fx:id="adressErrorLbl" layoutX="38.0" layoutY="257.0" prefHeight="17.0" prefWidth="176.0" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
+                                          <Label fx:id="postCodeErrorLbl" layoutX="38.0" layoutY="345.0" prefHeight="17.0" prefWidth="179.0" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
+                                          <Label fx:id="areaErrorLbl" layoutX="412.0" layoutY="81.0" prefHeight="17.0" prefWidth="181.0" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
+                                          <Label fx:id="mobileErrorLbl" layoutX="412.0" layoutY="169.0" prefHeight="17.0" prefWidth="175.0" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
+                                          <Label fx:id="emailErrorLbl" layoutX="412.0" layoutY="257.0" prefHeight="17.0" prefWidth="183.0" text="OBS! Fältet kan inte vara tomt!" textFill="#d30b0b" />
+                                          <Label fx:id="postCodeAmountErrorLbl" layoutX="38.0" layoutY="345.0" prefHeight="17.0" prefWidth="193.0" text="OBS! Postnummer innehåller 5 tal!" textFill="#d30b0b" />
+                                          <Label fx:id="mobileAmountErrorLbl" layoutX="412.0" layoutY="169.0" prefHeight="17.0" prefWidth="210.0" text="OBS! Mobilnummer innehåller 10 tal!" textFill="#d30b0b" />
+                                          <Label fx:id="emailStyleErrorLbl" layoutX="412.0" layoutY="257.0" prefHeight="17.0" prefWidth="183.0" text="OBS! Fältet är inte i email Form" textFill="#d30b0b" />
+                                          <Label fx:id="postCodeStyleErrorLbl" layoutX="38.0" layoutY="345.0" prefHeight="17.0" prefWidth="220.0" text="OBS! Postnummer få bara innehålla tal!" textFill="#d30b0b" />
+                                          <Label fx:id="mobileStyleErrorLbl" layoutX="412.0" layoutY="169.0" prefHeight="17.0" prefWidth="227.0" text="OBS! Mobilnummer få bara innehåller tal!" textFill="#d30b0b" />
                                        </children>
                                     </Pane>
                                  </children>
@@ -131,7 +147,7 @@
                         </Pane>
                         <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
                            <children>
-                              <Label fx:id="pageNameLabel" layoutX="333.0" layoutY="5.0" text="Personuppgifter">
+                              <Label fx:id="pageNameLabel" layoutX="296.0" layoutY="5.0" text="Personuppgifter">
                                  <font>
                                     <Font size="24.0" />
                                  </font></Label>
