--- a/src/main/PurchaseFeedback/PurchaseFeedback.fxml
+++ b/src/main/PurchaseFeedback/PurchaseFeedback.fxml
@@ -9,9 +9,9 @@
    <children>
       <Pane layoutX="172.0" layoutY="-71.0" prefHeight="70.0" prefWidth="600.0" style="-fx-background-color: #FF7575;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="feedbackLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="20.0" layoutY="18.0" prefHeight="17.0" prefWidth="560.0" styleClass="san-serif" text="1 st Paprika har lagts till i varukorgen" textAlignment="RIGHT" textOverrun="CLIP">
+            <Label fx:id="feedbackLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="20.0" layoutY="18.0" prefHeight="17.0" prefWidth="560.0" text="1 st Paprika har lagts till i varukorgen" textAlignment="RIGHT" textOverrun="CLIP">
                <font>
-                  <Font size="24.0" />
+                  <Font name="SansSerif Regular" size="24.0" />
                </font>
             </Label>
          </children>
