--- a/src/main/ShoppingCart/ShoppingCart.fxml
+++ b/src/main/ShoppingCart/ShoppingCart.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -49,27 +48,27 @@
                                                 <FlowPane fx:id="shoppingCartFlowPane" prefHeight="319.0" prefWidth="767.0" style="-fx-background-color: white;" stylesheets="@../Res/styles.css" />
                                              </content>
                                           </ScrollPane>
-                                          <Label layoutX="121.0" layoutY="5.0" styleClass="san-serif" text="Produkt">
+                                          <Label layoutX="121.0" layoutY="5.0" text="Produkt">
                                              <font>
-                                                <Font size="24.0" />
+                                                <Font name="SansSerif Regular" size="24.0" />
                                              </font></Label>
-                                          <Label layoutX="451.0" layoutY="5.0" styleClass="san-serif" text="Styckpris">
+                                          <Label layoutX="451.0" layoutY="5.0" text="Styckpris">
                                              <font>
-                                                <Font size="24.0" />
+                                                <Font name="SansSerif Regular" size="24.0" />
                                              </font></Label>
-                                          <Label layoutX="290.0" layoutY="5.0" styleClass="san-serif" text="Antal">
+                                          <Label layoutX="290.0" layoutY="5.0" text="Antal">
                                              <font>
-                                                <Font size="24.0" />
+                                                <Font name="SansSerif Regular" size="24.0" />
                                              </font></Label>
-                                          <Label layoutX="589.0" layoutY="5.0" styleClass="san-serif" text="Totalpris">
+                                          <Label layoutX="589.0" layoutY="5.0" text="Totalpris">
                                              <font>
-                                                <Font size="24.0" />
+                                                <Font name="SansSerif Regular" size="24.0" />
                                              </font></Label>
-                                          <Label layoutX="35.0" layoutY="364.0" styleClass="san-serif" text="Totalbelopp">
+                                          <Label layoutX="35.0" layoutY="364.0" text="Totalbelopp">
                                              <font>
                                                 <Font name="System Bold" size="30.0" />
                                              </font></Label>
-                                          <Button fx:id="saveButton" layoutX="391.0" layoutY="365.0" mnemonicParsing="false" onMouseClicked="#saveAsList" prefHeight="44.0" prefWidth="226.0" text="Spara som inköpslista">
+                                          <Button fx:id="saveButton" layoutX="391.0" layoutY="365.0" mnemonicParsing="false" onMouseClicked="#saveAsList" prefHeight="44.0" prefWidth="226.0" styleClass="cursor-hand" text="Spara som inköpslista">
                                              <font>
                                                 <Font size="16.0" />
                                              </font>
@@ -79,16 +78,11 @@
                                                       <Image url="@../Res/Images/inkopslistor.png" />
                                                    </image>
                                                 </ImageView>
-                                             </graphic>
-                                             <styleClass>
-                                                <String fx:value="cursor-hand" />
-                                                <String fx:value="san-serif" />
-                                             </styleClass></Button>
-                                          <Label fx:id="totalSumLabel" layoutX="671.0" layoutY="370.0" styleClass="san-serif" text="X kr">
+                                             </graphic></Button>
+                                          <Label fx:id="totalSumLabel" layoutX="671.0" layoutY="370.0" text="X kr">
                                              <font>
                                                 <Font name="System Bold" size="30.0" />
                                              </font></Label>
-                                          <ImageView fx:id="saveTooltip" fitHeight="31.0" fitWidth="37.0" layoutX="552.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true" />
                                        </children>
                                     </AnchorPane>
                                  </children>
@@ -111,7 +105,7 @@
                         </Pane>
                         <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
                            <children>
-                              <Label fx:id="pageNameLabel" layoutX="292.0" layoutY="-1.0" styleClass="san-serif" text="KUNDVAGN">
+                              <Label fx:id="pageNameLabel" layoutX="292.0" layoutY="-1.0" text="KUNDVAGN">
                                  <font>
                                     <Font size="36.0" />
                                  </font></Label>
