--- a/src/main/Timetable/Timetable.fxml
+++ b/src/main/Timetable/Timetable.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -39,9 +38,9 @@
                      <children>
                         <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
                            <children>
-                              <Label fx:id="pageNameLabel" layoutX="269.0" layoutY="-1.0" styleClass="san-serif" text="Välj leveranstid">
+                              <Label fx:id="pageNameLabel" layoutX="269.0" layoutY="-1.0" text="Välj leveranstid">
                                  <font>
-                                    <Font size="36.0" />
+                                    <Font name="SansSerif Regular" size="36.0" />
                                  </font></Label>
                            </children>
                         </Pane>
@@ -63,17 +62,50 @@
                            <children>
                               <Pane prefHeight="416.0" prefWidth="781.0" style="-fx-background-color: white;">
                                  <children>
-                                    <Label layoutX="16.0" layoutY="81.0" styleClass="san-serif" text="8.00-10.00" />
-                                    <Label layoutX="13.0" layoutY="168.0" styleClass="san-serif" text="10.00-12.00" />
-                                    <Label layoutX="13.0" layoutY="251.0" styleClass="san-serif" text="12.00-14.00" />
-                                    <Label layoutX="13.0" layoutY="340.0" styleClass="san-serif" text="14.00-16.00" />
-                                    <Label fx:id="date1Label" alignment="CENTER" layoutX="113.0" layoutY="24.0" styleClass="san-serif" text="date 1" />
-                                    <Label fx:id="date2Label" layoutX="213.0" layoutY="24.0" styleClass="san-serif" text="date 2" />
-                                    <Label fx:id="date3Label" layoutX="313.0" layoutY="24.0" styleClass="san-serif" text="date 3" />
-                                    <Label fx:id="date4Label" layoutX="413.0" layoutY="24.0" styleClass="san-serif" text="date 4" />
-                                    <Label fx:id="date5Label" layoutX="513.0" layoutY="24.0" styleClass="san-serif" text="date 5" />
-                                    <Label fx:id="date6Label" layoutX="613.0" layoutY="24.0" styleClass="san-serif" text="date 6" />
-                                    <Label fx:id="date7Label" layoutX="713.0" layoutY="24.0" styleClass="san-serif" text="date 7" />
+                                    <Label layoutX="16.0" layoutY="81.0" text="8.00-10.00">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label layoutX="13.0" layoutY="168.0" text="10.00-12.00">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label layoutX="13.0" layoutY="251.0" text="12.00-14.00">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label layoutX="13.0" layoutY="340.0" text="14.00-16.00">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label fx:id="date1Label" alignment="CENTER" layoutX="113.0" layoutY="24.0" text="date 1">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label fx:id="date2Label" layoutX="213.0" layoutY="24.0" text="date 2">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label fx:id="date3Label" layoutX="313.0" layoutY="24.0" text="date 3">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label fx:id="date4Label" layoutX="413.0" layoutY="24.0" text="date 4">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label fx:id="date5Label" layoutX="513.0" layoutY="24.0" text="date 5">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label fx:id="date6Label" layoutX="613.0" layoutY="24.0" text="date 6">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
+                                    <Label fx:id="date7Label" layoutX="713.0" layoutY="24.0" text="date 7">
+                                       <font>
+                                          <Font name="SansSerif Regular" size="12.0" />
+                                       </font></Label>
                                     <FlowPane fx:id="timeTableFlowPane" layoutX="88.0" layoutY="52.0" prefHeight="335.0" prefWidth="676.0" />
                                     <Line endX="-100.0" endY="383.0" layoutX="276.2" layoutY="33.0" startX="-100.0" startY="-33.0" />
                                     <Line endX="-100.0" endY="383.0" layoutX="375.6" layoutY="33.0" startX="-100.0" startY="-33.0" />
@@ -93,16 +125,8 @@
                         </AnchorPane>
                      </children>
                   </Pane>
-                  <Button fx:id="nextWeekButton" layoutX="925.0" layoutY="260.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="52.0" text="Nästa vecka" wrapText="true">
-                     <styleClass>
-                        <String fx:value="cursor-hand" />
-                        <String fx:value="san-serif" />
-                     </styleClass></Button>
-                  <Button fx:id="previousWeekButton" layoutX="14.0" layoutY="271.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="52.0" text="Förra vecka" wrapText="true">
-                     <styleClass>
-                        <String fx:value="cursor-hand" />
-                        <String fx:value="san-serif" />
-                     </styleClass></Button>
+                  <Button fx:id="nextWeekButton" layoutX="925.0" layoutY="260.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="52.0" styleClass="cursor-hand" text="Nästa vecka" wrapText="true" />
+                  <Button fx:id="previousWeekButton" layoutX="14.0" layoutY="271.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="52.0" styleClass="cursor-hand" text="Förra vecka" wrapText="true" />
                </children>
             </Pane>
          </center>
